# cmake-hacking

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cmake-hacking.tex
chapter/: 0-foreword.tex  01-why-cmake.tex  02-say-hello.tex  04-tag-the-version.tex  3-add-a-header-file.tex
examples/chapter01/Hello/: CMakeLists.txt
examples/chapter01/Hello/src/: hello.cpp
examples/chapter01/hello/: CMakeLists.txt
examples/chapter02/Hello/: CMakeLists.txt
examples/chapter02/Hello/include/greeter/: about_time.hpp
examples/chapter02/Hello/src/: hello.cpp
examples/chapter03/Hello/: CMakeLists.txt
examples/chapter03/Hello/include/: config.hpp.in
examples/chapter03/Hello/src/: hello.cpp
